--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 @import "tailwindcss";
+@plugin "daisyui";
+/*  */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*  */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
 
 .roboto-serif-font {
